# DenStock

./: .dockerignore  .env.backup.example  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh  Старт.bat
apps/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  navigation.py  permissions.py  roles.py  signals.py  urls.py  views.py
apps/actions/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/ai_support/: apps.py  checks.py  (+10 more)
assets/: package.json  tailwind.config.js
config/: asgi.py  urls.py  wsgi.py
docker/: Dockerfile  entrypoint.sh
templates/: 403.html  base.html
tests/: test_actions.py  test_ai_support.py  test_ai_support_external_launcher.py  test_ai_support_files.py  test_ai_support_postgresql.py  test_ai_support_providers.py  test_ai_support_runtime.py  test_ai_support_security.py  test_auth.py  test_backups_ui.py  test_batches.py  test_brp.py  test_counting.py  test_customs_application_area.py  test_customs_export.py  test_customs_weights.py  test_dashboard.py  test_directories.py  test_exact_action_lookup.py  test_health.py  test_images.py  test_inventory_movement.py  test_labels.py  test_landed_cost.py  test_movement_stock_sync.py  test_navigation_simplification.py  test_number_format.py  test_offsite_scaffold.py  test_operations.py  test_ops_docs.py  test_pagination.py  test_part_identity_ui.py  test_part_items.py  test_part_lookup.py  test_partial_navigation.py  test_parts.py  test_polaris.py  test_preset_import.py  test_price_settings.py  test_receipts.py  (+24 more)
(+494 files in other folders)
