[project]
name = "denstock"
version = "0.1.0"
description = "Складской учёт запчастей DenStock"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6.0",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "Pillow>=11.0,<13.0",
    # Layer 31: импорт BRP-каталога из Excel (команда import_brp_catalog).
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.6",
    "djlint>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
# Умеренный набор, чтобы не мешать старту (условие 6)
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["F403", "F405"]

[tool.djlint]
profile = "django"
indent = 2
# Не слишком жёстко на старте
ignore = "H006,H013,H021,H030,H031"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "postgresql: integration tests that require an explicit staging PostgreSQL DATABASE_URL",
]
